# ticTacToe

./: CMakeLists.txt  README.md  game.hpp  glut.hpp  main.cpp
